synchronized non-UTF8 bundles.

--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -12,37 +12,33 @@ LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin (Western European)
 LOCALE_ENGLISH_LANGUAGE_NAME=Dutch
-# Before adding a value below, verify the existence of the translation on the NSIS repository:
-# http://cvs.sourceforge.net/viewcvs.py/nsis/NSIS/Contrib/Language%20files/
 LOCALE_NSIS_NAME=Dutch
-# See also other translatable items for the LimeWire installer:
-# http://www.limewire.org/fisheye/viewrep/limecvs/lib/installbundles/
-
-################################################################################
-# Key/value pair for whether or not bold characters should be used for this
-# locale. Must be "true" or "false" (true only for complex scripts).
-################################################################################
 DISABLE_BOLD_CHARACTERS=false
-
-################################################################################
-# Key/value pair for whether or not the layout should be adapted for right-to-
-# left scripts. Must be "true" or "false" (true only for semitic scripts).
-################################################################################
 LAYOUT_RIGHT_TO_LEFT=false
-
-################################################################################
-# Key/value pair for whether or not the tips of the day should be displayed.
-# The default is false (set to true if TOTDs exist).
-################################################################################
-# See: http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/totd/
 HAS_TIPS_OF_THE_DAY=false
 
-# See also other translatable resources for the application:
-# * translations of meta-data search items:
-# http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/xml/display/
-# * translations of "about.html"
-# http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/resources/
-
+################################################################################
+# TO TRANSLATORS:  DO NOT EDIT ANY OF THE ABOVE LINES.
+# Everything above this point is used internally by the LimeWire program and
+# should not be edited.  See below for translating.
+################################################################################
+################################################################################
+# How to translate:
+# 1) Find a line that begins with #?
+# 2) Remove the #?
+# 3) Translate the line
+#
+# You can use the English line directly above it as a reference.
+# All English lines begin with '#### '.
+# You should not change those lines.
+#
+# If the language is a variant of another language
+# (like Brazilian/Standard Portuguese or Traditional/Simplified Chinese), there
+# will also be a line that begins with '###$ ' showing the translation in the
+# other language, if there was a translation in the other language.
+# You should not change those lines.
+#
+# You can also correct mispelled translations, if you see one that is wrong.
 ################################################################################
 ################################################################################
 # TRANSLATIONS START BELOW.
@@ -607,7 +603,7 @@ SEARCH_PUBLIC_BLOCK_STRING=Negeer host
 SEARCH_RESULT_TABLE_LABEL=Resultaten
 #### SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Search More
 SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Zoek verder
-#### SEARCH_RESULT_SECURE_TIP=This is a secure result.  No information in this result has been tampered. 
+#### SEARCH_RESULT_SECURE_TIP=This is a secure result.  No information in this result has been tampered.
 SEARCH_RESULT_SECURE_TIP=Dit is een beveiligd resultaat. Geen informatie van dit resultaat is bewerkt.
 #### SEARCH_VIRUS_MSG_ONE=One of the selected files is an executable
 SEARCH_VIRUS_MSG_ONE=Eén van de geselecteerde bestanden is een .exe-bestand
@@ -670,7 +666,7 @@ SEARCH_BLOCK_HOST=Wilt u de zoekresultaten van de host blokkeren
 # Magnet stuff
 ################################################################################
 #### MAGNET_COPY_MAGNET_LINKS_LABEL=Copy Magnet Links to Clipboard
-MAGNET_COPY_MAGNET_LINKS_LABEL=
+#? MAGNET_COPY_MAGNET_LINKS_LABEL=
 #### MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copy the Magnet Links of the Selected Files to the Clipboard
 MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Kopieer de Magnet-koppeling naar het klembord vanuit de geselecteerde bestanden
 #### MAGNET_COPY_MAGNET_LINKS_WARNING=One or more of the created magnet links may not be accessible since their hosts are firewalled.
@@ -1467,7 +1463,7 @@ PLAYLIST_FILE_PARSE_PROBLEM=. Het probleem kan niet verholpen worden.
 SETUP_DIALOG_TITLE=LimeWire Setup Venster
 #### SETUP_LANGUAGE_TITLE=Language Options
 SETUP_LANGUAGE_TITLE=Taalopties
-#### SETUP_CHOOSE_LANGUAGE_LABEL=Choose Language: 
+#### SETUP_CHOOSE_LANGUAGE_LABEL=Choose Language:
 SETUP_CHOOSE_LANGUAGE_LABEL=Kies uw Taal:
 #### SETUP_LANGUAGE_LABEL=Please choose the language you would like LimeWire to use.
 SETUP_LANGUAGE_LABEL=Gelieve een taalkeuze te maken voor LimeWire.
@@ -1649,7 +1645,7 @@ XML_videos__video__stars__=Sterren
 #### XML_videos__video__type__=Type
 XML_videos__video__type__=Type
 #### XML_videos__video__length__=Length
-XML_videos__video__length__=
+#? XML_videos__video__length__=
 #### XML_videos__video__year__=Year
 XML_videos__video__year__=Jaar
 #### XML_videos__video__language__=Language
@@ -1888,7 +1884,7 @@ INTERNETARCHIVE_UPLOADER_CONNECTED=Verbinding...
 INTERNETARCHIVE_UPLOADER_FILE_UPLOADING=Bestand uploaden
 #### INTERNETARCHIVE_UPLOADER_FILE_UPLOADING_OF=of
 INTERNETARCHIVE_UPLOADER_FILE_UPLOADING_OF=van de
-#### INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Uploaded 
+#### INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Uploaded
 INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Voltooid
 #### INTERNETARCHIVE_UPLOADER_FILE_BYTESOF=bytes of
 INTERNETARCHIVE_UPLOADER_FILE_BYTESOF=bytes van de
@@ -3753,26 +3749,6 @@ STATS_LIME_SENT_BYTES_MULTICAST_QUERY_REPLIES_LABEL=Kilobytes voor Multicast-tre
 STATS_LIME_SENT_BYTES_MULTICAST_PUSH_REQUESTS_TITLE=Push
 #### STATS_LIME_SENT_BYTES_MULTICAST_PUSH_REQUESTS_LABEL=Kilobytes for Multicast pushes sent from all Gnutella clients versus other LimeWires.
 STATS_LIME_SENT_BYTES_MULTICAST_PUSH_REQUESTS_LABEL=Kilobytes voor Multicast-pushes verzonden vanaf alle Gnutella-cliënten tegenover andere LimeWires.
-
-# ultrapeer-specific sent stats
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_TITLE=Sent
-STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_TITLE=Verzonden
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_LABEL=All queries that were routed to other Ultrapeers for the last hop, using query routing tables.
-STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_LABEL=Alle vragen die aan andere Ultrapeers voor de laatste hop werden gerout, gebruiken vraag- en routing- lijsten.
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_TITLE=Not Sent
-STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_TITLE=Niet verzonden
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_LABEL=
-STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_LABEL=
-
-# leaf-specific sent stats
-#### STATS_SENT_LEAF_ROUTED_QUERIES_SEND_TITLE=Sent
-STATS_SENT_LEAF_ROUTED_QUERIES_SEND_TITLE=Verzonden
-#### STATS_SENT_LEAF_ROUTED_QUERIES_SEND_LABEL=All queries that were routed to leaves, using query routing tables.
-STATS_SENT_LEAF_ROUTED_QUERIES_SEND_LABEL=Alle vragen die aan andere ultrapeers werden gerout, gebruiken vraag- en routing- lijsten.
-#### STATS_SENT_LEAF_ROUTED_QUERIES_DROP_TITLE=Not Sent
-STATS_SENT_LEAF_ROUTED_QUERIES_DROP_TITLE=Niet verzonden
-#### STATS_SENT_LEAF_ROUTED_QUERIES_DROP_LABEL=
-STATS_SENT_LEAF_ROUTED_QUERIES_DROP_LABEL=
 
 ################################################################################
 # Key/value pairs for advanced Gnutella message statistics -- handshaking
