--- a/lib/messagebundles/MessagesBundle_da.properties
+++ b/lib/messagebundles/MessagesBundle_da.properties
@@ -12,37 +12,33 @@ LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin (Western European)
 LOCALE_ENGLISH_LANGUAGE_NAME=Danish
-# Before adding a value below, verify the existence of the translation on the NSIS repository:
-# http://cvs.sourceforge.net/viewcvs.py/nsis/NSIS/Contrib/Language%20files/
 LOCALE_NSIS_NAME=Danish
-# See also other translatable items for the LimeWire installer:
-# http://www.limewire.org/fisheye/viewrep/limecvs/lib/installbundles/
-
-################################################################################
-# Key/value pair for whether or not bold characters should be used for this
-# locale. Must be "true" or "false" (true only for complex scripts).
-################################################################################
 DISABLE_BOLD_CHARACTERS=false
-
-################################################################################
-# Key/value pair for whether or not the layout should be adapted for right-to-
-# left scripts. Must be "true" or "false" (true only for semitic scripts).
-################################################################################
 LAYOUT_RIGHT_TO_LEFT=false
-
-################################################################################
-# Key/value pair for whether or not the tips of the day should be displayed.
-# The default is false (set to true if TOTDs exist).
-################################################################################
-# See: http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/totd/
 HAS_TIPS_OF_THE_DAY=false
 
-# See also other translatable resources for the application:
-# * translations of meta-data search items:
-# http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/xml/display/
-# * translations of "about.html"
-# http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/resources/
-
+################################################################################
+# TO TRANSLATORS:  DO NOT EDIT ANY OF THE ABOVE LINES.
+# Everything above this point is used internally by the LimeWire program and
+# should not be edited.  See below for translating.
+################################################################################
+################################################################################
+# How to translate:
+# 1) Find a line that begins with #?
+# 2) Remove the #?
+# 3) Translate the line
+#
+# You can use the English line directly above it as a reference.
+# All English lines begin with '#### '.
+# You should not change those lines.
+#
+# If the language is a variant of another language
+# (like Brazilian/Standard Portuguese or Traditional/Simplified Chinese), there
+# will also be a line that begins with '###$ ' showing the translation in the
+# other language, if there was a translation in the other language.
+# You should not change those lines.
+#
+# You can also correct mispelled translations, if you see one that is wrong.
 ################################################################################
 ################################################################################
 # TRANSLATIONS START BELOW.
@@ -607,7 +603,7 @@ SEARCH_PUBLIC_BLOCK_STRING=Bloker vært
 SEARCH_RESULT_TABLE_LABEL=Resultater
 #### SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Search More
 SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Søg mere
-#### SEARCH_RESULT_SECURE_TIP=This is a secure result.  No information in this result has been tampered. 
+#### SEARCH_RESULT_SECURE_TIP=This is a secure result.  No information in this result has been tampered.
 SEARCH_RESULT_SECURE_TIP=Dette er et sikkert resultat. Ingen information i dette resultat er blevet ændret.
 #### SEARCH_VIRUS_MSG_ONE=One of the selected files is an executable
 SEARCH_VIRUS_MSG_ONE=En af de valgte filer er en programfil
@@ -1467,7 +1463,7 @@ PLAYLIST_FILE_PARSE_PROBLEM=. Filen kan ikke opdeles.
 #? SETUP_DIALOG_TITLE=
 #### SETUP_LANGUAGE_TITLE=Language Options
 SETUP_LANGUAGE_TITLE=Sprogvalg
-#### SETUP_CHOOSE_LANGUAGE_LABEL=Choose Language: 
+#### SETUP_CHOOSE_LANGUAGE_LABEL=Choose Language:
 #? SETUP_CHOOSE_LANGUAGE_LABEL=
 #### SETUP_LANGUAGE_LABEL=Please choose the language you would like LimeWire to use.
 SETUP_LANGUAGE_LABEL=Vælg det sprog, som du ønsker, at LimeWire skal anvende.
@@ -1888,7 +1884,7 @@ INTERNETARCHIVE_UPLOADER_CONNECTED=Forbindelse...
 INTERNETARCHIVE_UPLOADER_FILE_UPLOADING=Oploader fil
 #### INTERNETARCHIVE_UPLOADER_FILE_UPLOADING_OF=of
 INTERNETARCHIVE_UPLOADER_FILE_UPLOADING_OF=af
-#### INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Uploaded 
+#### INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Uploaded
 INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Oploaded
 #### INTERNETARCHIVE_UPLOADER_FILE_BYTESOF=bytes of
 INTERNETARCHIVE_UPLOADER_FILE_BYTESOF=bytes af
@@ -3753,26 +3749,6 @@ STATS_LIME_SENT_BYTES_MULTICAST_QUERY_REPLIES_TITLE=Forespørgsels hits
 STATS_LIME_SENT_BYTES_MULTICAST_PUSH_REQUESTS_TITLE=Push anmodninger
 #### STATS_LIME_SENT_BYTES_MULTICAST_PUSH_REQUESTS_LABEL=Kilobytes for Multicast pushes sent from all Gnutella clients versus other LimeWires.
 #? STATS_LIME_SENT_BYTES_MULTICAST_PUSH_REQUESTS_LABEL=
-
-# ultrapeer-specific sent stats
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_TITLE=Sent
-STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_TITLE=Sendt
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_LABEL=All queries that were routed to other Ultrapeers for the last hop, using query routing tables.
-#? STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_LABEL=
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_TITLE=Not Sent
-STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_TITLE=Ikke sendt
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_LABEL=
-STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_LABEL=
-
-# leaf-specific sent stats
-#### STATS_SENT_LEAF_ROUTED_QUERIES_SEND_TITLE=Sent
-STATS_SENT_LEAF_ROUTED_QUERIES_SEND_TITLE=Sendt
-#### STATS_SENT_LEAF_ROUTED_QUERIES_SEND_LABEL=All queries that were routed to leaves, using query routing tables.
-#? STATS_SENT_LEAF_ROUTED_QUERIES_SEND_LABEL=
-#### STATS_SENT_LEAF_ROUTED_QUERIES_DROP_TITLE=Not Sent
-STATS_SENT_LEAF_ROUTED_QUERIES_DROP_TITLE=Ikke sendt
-#### STATS_SENT_LEAF_ROUTED_QUERIES_DROP_LABEL=
-STATS_SENT_LEAF_ROUTED_QUERIES_DROP_LABEL=
 
 ################################################################################
 # Key/value pairs for advanced Gnutella message statistics -- handshaking
