--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -12,37 +12,33 @@ LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin (Western European)
 LOCALE_ENGLISH_LANGUAGE_NAME=French
-# Before adding a value below, verify the existence of the translation on the NSIS repository:
-# http://cvs.sourceforge.net/viewcvs.py/nsis/NSIS/Contrib/Language%20files/
 LOCALE_NSIS_NAME=French
-# See also other translatable items for the LimeWire installer:
-# http://www.limewire.org/fisheye/viewrep/limecvs/lib/installbundles/
-
-################################################################################
-# Key/value pair for whether or not bold characters should be used for this
-# locale. Must be "true" or "false" (true only for complex scripts).
-################################################################################
 DISABLE_BOLD_CHARACTERS=false
-
-################################################################################
-# Key/value pair for whether or not the layout should be adapted for right-to-
-# left scripts. Must be "true" or "false" (true only for semitic scripts).
-################################################################################
 LAYOUT_RIGHT_TO_LEFT=false
-
-################################################################################
-# Key/value pair for whether or not the tips of the day should be displayed.
-# The default is false (set to true if TOTDs exist).
-################################################################################
-# See: http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/totd/
 HAS_TIPS_OF_THE_DAY=true
 
-# See also other translatable resources for the application:
-# * translations of meta-data search items:
-# http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/xml/display/
-# * translations of "about.html"
-# http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/resources/
-
+################################################################################
+# TO TRANSLATORS:  DO NOT EDIT ANY OF THE ABOVE LINES.
+# Everything above this point is used internally by the LimeWire program and
+# should not be edited.  See below for translating.
+################################################################################
+################################################################################
+# How to translate:
+# 1) Find a line that begins with #?
+# 2) Remove the #?
+# 3) Translate the line
+#
+# You can use the English line directly above it as a reference.
+# All English lines begin with '#### '.
+# You should not change those lines.
+#
+# If the language is a variant of another language
+# (like Brazilian/Standard Portuguese or Traditional/Simplified Chinese), there
+# will also be a line that begins with '###$ ' showing the translation in the
+# other language, if there was a translation in the other language.
+# You should not change those lines.
+#
+# You can also correct mispelled translations, if you see one that is wrong.
 ################################################################################
 ################################################################################
 # TRANSLATIONS START BELOW.
@@ -607,7 +603,7 @@ SEARCH_PUBLIC_BLOCK_STRING=Bannir l?hôte
 SEARCH_RESULT_TABLE_LABEL=Résultats
 #### SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Search More
 SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Chercher davantage
-#### SEARCH_RESULT_SECURE_TIP=This is a secure result.  No information in this result has been tampered. 
+#### SEARCH_RESULT_SECURE_TIP=This is a secure result.  No information in this result has been tampered.
 SEARCH_RESULT_SECURE_TIP=Ceci est un résultat sécurisé. Aucune information de ce résultat n?a été altérée durant son transfert d?un hôte à l?autre.
 #### SEARCH_VIRUS_MSG_ONE=One of the selected files is an executable
 SEARCH_VIRUS_MSG_ONE=Un des fichiers sélectionnés est un programme
@@ -1467,7 +1463,7 @@ PLAYLIST_FILE_PARSE_PROBLEM=. Le format du fichier est incorrect ou non reconnu.
 SETUP_DIALOG_TITLE=Assistant de configuration de LimeWire
 #### SETUP_LANGUAGE_TITLE=Language Options
 SETUP_LANGUAGE_TITLE=Options de langue
-#### SETUP_CHOOSE_LANGUAGE_LABEL=Choose Language: 
+#### SETUP_CHOOSE_LANGUAGE_LABEL=Choose Language:
 SETUP_CHOOSE_LANGUAGE_LABEL=Choix de la langue:
 #### SETUP_LANGUAGE_LABEL=Please choose the language you would like LimeWire to use.
 SETUP_LANGUAGE_LABEL=Veuillez choisir la langue que vous souhaitez voir utilisée dans LimeWire.
@@ -1888,7 +1884,7 @@ INTERNETARCHIVE_UPLOADER_CONNECTED=Connecté...
 INTERNETARCHIVE_UPLOADER_FILE_UPLOADING=Transfert du fichier
 #### INTERNETARCHIVE_UPLOADER_FILE_UPLOADING_OF=of
 INTERNETARCHIVE_UPLOADER_FILE_UPLOADING_OF=pour
-#### INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Uploaded 
+#### INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Uploaded
 INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Transféré
 #### INTERNETARCHIVE_UPLOADER_FILE_BYTESOF=bytes of
 INTERNETARCHIVE_UPLOADER_FILE_BYTESOF=octets sur
@@ -3753,26 +3749,6 @@ STATS_LIME_SENT_BYTES_MULTICAST_QUERY_REPLIES_LABEL=Volume des résultats aux rec
 STATS_LIME_SENT_BYTES_MULTICAST_PUSH_REQUESTS_TITLE=Mandat de renvoi
 #### STATS_LIME_SENT_BYTES_MULTICAST_PUSH_REQUESTS_LABEL=Kilobytes for Multicast pushes sent from all Gnutella clients versus other LimeWires.
 STATS_LIME_SENT_BYTES_MULTICAST_PUSH_REQUESTS_LABEL=Volume des demandes de connexion inverse émises via Multicast à tous les agents ou d?autres agents LimeWire.
-
-# ultrapeer-specific sent stats
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_TITLE=Sent
-STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_TITLE=Requête transmise
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_LABEL=All queries that were routed to other Ultrapeers for the last hop, using query routing tables.
-STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_LABEL=Toutes les requêtes routées vers d?autres Ultrapairs sur le dernier ?hop?, grâce aux tables de routage des recherches.
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_TITLE=Not Sent
-STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_TITLE=Requête non transmise
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_LABEL=
-STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_LABEL=Toutes les requêtes qui auraient pu être envoyées potentiellement à d?autres Ultrapairs pour le dernier hop.
-
-# leaf-specific sent stats
-#### STATS_SENT_LEAF_ROUTED_QUERIES_SEND_TITLE=Sent
-STATS_SENT_LEAF_ROUTED_QUERIES_SEND_TITLE=Requête transmise
-#### STATS_SENT_LEAF_ROUTED_QUERIES_SEND_LABEL=All queries that were routed to leaves, using query routing tables.
-STATS_SENT_LEAF_ROUTED_QUERIES_SEND_LABEL=Toutes les requêtes routées vers d?autres Ultrapairs sur le dernier ?hop?, grâce aux tables de routage des recherches.
-#### STATS_SENT_LEAF_ROUTED_QUERIES_DROP_TITLE=Not Sent
-STATS_SENT_LEAF_ROUTED_QUERIES_DROP_TITLE=Requête non transmise
-#### STATS_SENT_LEAF_ROUTED_QUERIES_DROP_LABEL=
-STATS_SENT_LEAF_ROUTED_QUERIES_DROP_LABEL=Toutes les requêtes qui auraient pu être envoyées potentiellement à d?autres Ultrapairs pour le dernier hop.
 
 ################################################################################
 # Key/value pairs for advanced Gnutella message statistics -- handshaking
