--- a/lib/messagebundles/MessagesBundle_pt.properties
+++ b/lib/messagebundles/MessagesBundle_pt.properties
@@ -12,37 +12,33 @@ LOCALE_VARIANT_NAME=Standart
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin (Western European)
 LOCALE_ENGLISH_LANGUAGE_NAME=Portuguese (Standard)
-# Before adding a value below, verify the existence of the translation on the NSIS repository:
-# http://cvs.sourceforge.net/viewcvs.py/nsis/NSIS/Contrib/Language%20files/
 LOCALE_NSIS_NAME=Portuguese
-# See also other translatable items for the LimeWire installer:
-# http://www.limewire.org/fisheye/viewrep/limecvs/lib/installbundles/
-
-################################################################################
-# Key/value pair for whether or not bold characters should be used for this
-# locale. Must be "true" or "false" (true only for complex scripts).
-################################################################################
 DISABLE_BOLD_CHARACTERS=false
-
-################################################################################
-# Key/value pair for whether or not the layout should be adapted for right-to-
-# left scripts. Must be "true" or "false" (true only for semitic scripts).
-################################################################################
 LAYOUT_RIGHT_TO_LEFT=false
-
-################################################################################
-# Key/value pair for whether or not the tips of the day should be displayed.
-# The default is false (set to true if TOTDs exist).
-################################################################################
-# See: http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/totd/
 HAS_TIPS_OF_THE_DAY=false
 
-# See also other translatable resources for the application:
-# * translations of meta-data search items:
-# http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/xml/display/
-# * translations of "about.html"
-# http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/resources/
-
+################################################################################
+# TO TRANSLATORS:  DO NOT EDIT ANY OF THE ABOVE LINES.
+# Everything above this point is used internally by the LimeWire program and
+# should not be edited.  See below for translating.
+################################################################################
+################################################################################
+# How to translate:
+# 1) Find a line that begins with #?
+# 2) Remove the #?
+# 3) Translate the line
+#
+# You can use the English line directly above it as a reference.
+# All English lines begin with '#### '.
+# You should not change those lines.
+#
+# If the language is a variant of another language
+# (like Brazilian/Standard Portuguese or Traditional/Simplified Chinese), there
+# will also be a line that begins with '###$ ' showing the translation in the
+# other language, if there was a translation in the other language.
+# You should not change those lines.
+#
+# You can also correct mispelled translations, if you see one that is wrong.
 ################################################################################
 ################################################################################
 # TRANSLATIONS START BELOW.
@@ -607,7 +603,7 @@ SEARCH_PUBLIC_BLOCK_STRING=Bloquear anfitrião
 SEARCH_RESULT_TABLE_LABEL=Resultados
 #### SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Search More
 SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Pesquisar mais
-#### SEARCH_RESULT_SECURE_TIP=This is a secure result.  No information in this result has been tampered. 
+#### SEARCH_RESULT_SECURE_TIP=This is a secure result.  No information in this result has been tampered.
 #? SEARCH_RESULT_SECURE_TIP=
 #### SEARCH_VIRUS_MSG_ONE=One of the selected files is an executable
 SEARCH_VIRUS_MSG_ONE=Um dos ficheiros seleccionados é um
@@ -1467,7 +1463,7 @@ PLAYLIST_FILE_PARSE_PROBLEM=. Não é possível analisar o ficheiro.
 #? SETUP_DIALOG_TITLE=
 #### SETUP_LANGUAGE_TITLE=Language Options
 SETUP_LANGUAGE_TITLE=Opções de idioma
-#### SETUP_CHOOSE_LANGUAGE_LABEL=Choose Language: 
+#### SETUP_CHOOSE_LANGUAGE_LABEL=Choose Language:
 #? SETUP_CHOOSE_LANGUAGE_LABEL=
 #### SETUP_LANGUAGE_LABEL=Please choose the language you would like LimeWire to use.
 SETUP_LANGUAGE_LABEL=Seleccione o idioma que pretende que o LimeWire utilize.
@@ -1888,7 +1884,7 @@ META_EDITOR_OGG_KIND_LABEL=Ogg Vorbis
 #? INTERNETARCHIVE_UPLOADER_FILE_UPLOADING=
 #### INTERNETARCHIVE_UPLOADER_FILE_UPLOADING_OF=of
 #? INTERNETARCHIVE_UPLOADER_FILE_UPLOADING_OF=
-#### INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Uploaded 
+#### INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Uploaded
 #? INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=
 #### INTERNETARCHIVE_UPLOADER_FILE_BYTESOF=bytes of
 #? INTERNETARCHIVE_UPLOADER_FILE_BYTESOF=
@@ -3356,7 +3352,7 @@ STATS_LIME_RECEIVED_MULTICAST_MESSAGES_TITLE=Total
 #### STATS_LIME_RECEIVED_MULTICAST_MESSAGES_LABEL=Total number of messages received from other LimeWires.
 STATS_LIME_RECEIVED_MULTICAST_MESSAGES_LABEL=Número total de mensagens recebidas de outros utilizadores LimeWire.
 #### STATS_LIME_RECEIVED_MULTICAST_PING_REQUESTS_TITLE=Pings
-STATS_LIME_RECEIVED_MULTICAST_PING_REQUESTS_TITLE=
+#? STATS_LIME_RECEIVED_MULTICAST_PING_REQUESTS_TITLE=
 #### STATS_LIME_RECEIVED_MULTICAST_PING_REQUESTS_LABEL=Multicast pings received from all Gnutella clients versus other LimeWires.
 STATS_LIME_RECEIVED_MULTICAST_PING_REQUESTS_LABEL=Pings Multicast recebidos de todos os clientes Gnutella, versus outros utilizadores LimeWire.
 #### STATS_LIME_RECEIVED_MULTICAST_PING_REPLIES_TITLE=Pongs
@@ -3754,31 +3750,11 @@ STATS_LIME_SENT_BYTES_MULTICAST_PUSH_REQUESTS_TITLE=Pushes
 #### STATS_LIME_SENT_BYTES_MULTICAST_PUSH_REQUESTS_LABEL=Kilobytes for Multicast pushes sent from all Gnutella clients versus other LimeWires.
 STATS_LIME_SENT_BYTES_MULTICAST_PUSH_REQUESTS_LABEL=Kilobytes de pushes Multicast enviados a partir de todos os clientes Gnutella, versus outros utilizadores LimeWire.
 
-# ultrapeer-specific sent stats
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_TITLE=Sent
-STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_TITLE=Enviada
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_LABEL=All queries that were routed to other Ultrapeers for the last hop, using query routing tables.
-STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_LABEL=Todas as consultas foram encaminhadas para outros Ultrapeers do último hop, utilizando tabelas de encaminhamento de consulta.
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_TITLE=Not Sent
-STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_TITLE=Não enviada
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_LABEL=
-STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_LABEL=Não enviada
-
-# leaf-specific sent stats
-#### STATS_SENT_LEAF_ROUTED_QUERIES_SEND_TITLE=Sent
-STATS_SENT_LEAF_ROUTED_QUERIES_SEND_TITLE=Enviada
-#### STATS_SENT_LEAF_ROUTED_QUERIES_SEND_LABEL=All queries that were routed to leaves, using query routing tables.
-STATS_SENT_LEAF_ROUTED_QUERIES_SEND_LABEL=Todas as consultas que foram encaminhadas para leaves, utilizando tabelas de encaminhamento de consulta.
-#### STATS_SENT_LEAF_ROUTED_QUERIES_DROP_TITLE=Not Sent
-STATS_SENT_LEAF_ROUTED_QUERIES_DROP_TITLE=Não enviada
-#### STATS_SENT_LEAF_ROUTED_QUERIES_DROP_LABEL=
-STATS_SENT_LEAF_ROUTED_QUERIES_DROP_LABEL=Não enviada
-
 ################################################################################
 # Key/value pairs for advanced Gnutella message statistics -- handshaking
 ################################################################################
 #### HANDSHAKING=Handshaking
-HANDSHAKING=
+#? HANDSHAKING=
 #### STATS_HANDSHAKING_LEAF_TITLE=Leaf
 STATS_HANDSHAKING_LEAF_TITLE=Leaf
 #### STATS_HANDSHAKING_LEAF_LABEL=Statistics for handshaking as a leaf.
