synchronizing message bundles.

--- a/lib/messagebundles/MessagesBundle_it.properties
+++ b/lib/messagebundles/MessagesBundle_it.properties
@@ -603,7 +603,7 @@ SEARCH_PUBLIC_BLOCK_STRING=Blocca l'ospite remoto
 SEARCH_RESULT_TABLE_LABEL=Risultati
 #### SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Search More
 SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Ricerca ancora
-#### SEARCH_RESULT_SECURE_TIP=This is a secure result.  No information in this result has been tampered. 
+#### SEARCH_RESULT_SECURE_TIP=This is a secure result.  No information in this result has been tampered.
 SEARCH_RESULT_SECURE_TIP=Questo è un risultato sicuro.  In questo caso nessuna informazione è stata alterata.
 #### SEARCH_VIRUS_MSG_ONE=One of the selected files is an executable
 SEARCH_VIRUS_MSG_ONE=Uno dei file selezionati é un programma
@@ -1872,9 +1872,9 @@ CC_RDFOUTPUT_TITLE=Licenza RDF in uscita
 #### CC_RDF_FINISH_LABEL=Finish
 CC_RDF_FINISH_LABEL=Termina
 
-#### INTERNETARCHIVE_UPLOADER_TITLE=Trasmetti
+#### INTERNETARCHIVE_UPLOADER_TITLE=Upload
 INTERNETARCHIVE_UPLOADER_TITLE=Upload
-#### INTERNETARCHIVE_UPLOADER_LABEL=Please wait while LimeWire sta tramettendo i tuoi file alll'archivio internet
+#### INTERNETARCHIVE_UPLOADER_LABEL=Please wait while LimeWire is uploading your files to the Internet Archive
 INTERNETARCHIVE_UPLOADER_LABEL=Prego attendere mentre Limewire sta 
 #### INTERNETARCHIVE_UPLOADER_INIT=Connecting to the Internet Archive...
 INTERNETARCHIVE_UPLOADER_INIT=Connessione all'archivio internet...
