a tip that was removed in the English version

--- a/lib/messagebundles/totd/TOTD_fr.properties
+++ b/lib/messagebundles/totd/TOTD_fr.properties
@@ -25,13 +25,13 @@ GENERAL_16=Vous avez besoin de plus d'aide\u00a0? Visitez <a href="http://www.li
 GENERAL_17=Vous avez accidentellement interrompu l'un de vos chargements\u00a0? Activez l'onglet de la Médiathèque puis, dans le dossier "Incomplete", sélectionnez le nom du fichier incomplet à continuer et cliquez le bouton "Reprendre". Limewire recherchera automatiquement ce fichier sur le réseau et reprendra son chargement automatiquement.
 GENERAL_18=Vous connaissez une astuce pour utiliser efficacement LimeWire\u00a0? Envoyez la à <a href="mailto:totd@limewire.com">totd@limewire.com</a> et elle pourra apparaître dans les futures Astuces du jour\u00a0!
 #GENERAL_19 not used -- migrated to OSX & NOT_OSX.
-GENERAL_20=Parfois le bouton "Chercher" est désactivé. Cela arrive lorque LimeWire n'est connecté à aucun autre hôte. Choisissez Fichier -> Connecter et attendez que le témoin en bas à gauche se fixe au vert.
+#GENERAL_20 unused -- was duplicated as GENERAL_29
 GENERAL_21=Vous pouvez relancez les chargements qui indiquent "En attente d'autres sources..." en cherchant ce fichier à nouveau. LimeWire relancera automatiquement le chargement dès qu'il trouvera des résultats concordants.
 GENERAL_22=Vous avez une fonctionnalité intéressante que vous souhaiteriez voir intégrée dans LimeWire\u00a0? Suggérez la sur les <a href="http://www.limewire.com/forum.htm">forums</a> de LimeWire et elle pourra être intégrée dans une version future\u00a0!
 GENERAL_23=Vous pouvez créez vos propres thèmes d'affichage\u00a0! Visitez <a href="http://www.limewire.com/makeskins">le site web de LimeWire</a> pour des informations détaillées sur la façon dont ces habillages sont créés\u00a0!
 GENERAL_24=Vous voulez en savoir plus sur le développement de LimeWire\u00a0? Visitez <a href="http://www.limewire.org">le site web du source libre de LimeWire</a> et consultez tous les documents de travail\u00a0!
 GENERAL_25=Vous pouvez prévisualiser les fichiers en cours de chargement afin de vous assurer qu'ils correspondent à ce à quoi vous vous attendez. Sélectionnez simplement le chargement et cliquez le bouton "Lancer"\u00a0!
-#GENERAL_26 not used -- migrated to OSX & NOT_OSX.
+#GENERAL_26 unused -- migrated to OSX & NOT_OSX.
 GENERAL_27=Vous êtes curieux de savoir à quels hôtes Limewire se connecte ou est connecté\u00a0? Activez l'onglet "Connexions" dans le menu Affichage -> Afficher/Cacher, et consultez les connexions actuelles de Limewire.
 GENERAL_28=Vous pouvez discuter en direct avec d'autres personnes utilisant LimeWire. Sélectionnez un chargement ou un résultat affichant une face souriante dans la colonne Discussion et cliquez sur "Discuter..."
 GENERAL_29=Parfois le bouton "Chercher" est désactivé. Cela arrive lorque LimeWire n'est connecté à aucun autre hôte. Choisissez Fichier -> Connecter et attendez que les barres en bas à gauche passent au vert.
