Minor fix to Italian message bundle. Thanks to Alberto Nadali!

--- a/lib/messagebundles/MessagesBundle_it.properties
+++ b/lib/messagebundles/MessagesBundle_it.properties
@@ -2050,7 +2050,7 @@ SUPPORT_LIMEWIRE_04=Per ricezioni Turbo acquista Limewire Pro.
 #### SUPPORT_LIMEWIRE_05=Support open networks. Get LimeWire PRO.
 SUPPORT_LIMEWIRE_05=Supporta le reti aperte. Acquista Limewire Pro.
 #### SUPPORT_LIMEWIRE_06=Support open source and open protocols. Get LimeWire PRO.
-SUPPORT_LIMEWIRE_06=Supporta i soegenti e i protocolli aperti. Acquista Limewire Pro.
+SUPPORT_LIMEWIRE_06=Supporta i sorgenti e i protocolli aperti. Acquista Limewire Pro.
 #### SUPPORT_LIMEWIRE_07=For Turbo-Charged performance get LimeWire PRO.
 SUPPORT_LIMEWIRE_07=Per performance Turbo acquista Limewire Pro.
 #### SUPPORT_LIMEWIRE_08=Keep the Internet open. Get LimeWire PRO.
