synchronize using "CountPercent update br"

--- a/lib/messagebundles/MessagesBundle_br.properties
+++ b/lib/messagebundles/MessagesBundle_br.properties
@@ -12,37 +12,33 @@ LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin (Western European)
 LOCALE_ENGLISH_LANGUAGE_NAME=Breton
-# Before adding a value below, verify the existence of the translation on the NSIS repository:
-# http://cvs.sourceforge.net/viewcvs.py/nsis/NSIS/Contrib/Language%20files/
 LOCALE_NSIS_NAME=Breton
-# See also other translatable items for the LimeWire installer:
-# http://www.limewire.org/fisheye/viewrep/limecvs/lib/installbundles/
-
-################################################################################
-# Key/value pair for whether or not bold characters should be used for this
-# locale. Must be "true" or "false" (true only for complex scripts).
-################################################################################
 DISABLE_BOLD_CHARACTERS=false
-
-################################################################################
-# Key/value pair for whether or not the layout should be adapted for right-to-
-# left scripts. Must be "true" or "false" (true only for semitic scripts).
-################################################################################
 LAYOUT_RIGHT_TO_LEFT=false
-
-################################################################################
-# Key/value pair for whether or not the tips of the day should be displayed.
-# The default is false (set to true if TOTDs exist).
-################################################################################
-# See: http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/totd/
 HAS_TIPS_OF_THE_DAY=false
 
-# See also other translatable resources for the application:
-# * translations of meta-data search items:
-# http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/xml/display/
-# * translations of "about.html"
-# http://www.limewire.org/fisheye/viewrep/limecvs/lib/messagebundles/resources/
-
+################################################################################
+# TO TRANSLATORS: DO NOT EDIT ANY OF THE ABOVE LINES.
+# Everything above this point is used internally by the LimeWire program and
+# should not be edited. See below for translating.
+################################################################################
+################################################################################
+# How to translate:
+# 1) Find a line that begins with #?
+# 2) Remove the #?
+# 3) Translate the line
+#
+# You can use the English line directly above it as a reference.
+# All English lines begin with '#### '.
+# You should not change those lines.
+#
+# If the language is a variant of another language
+# (like Brazilian/Standard Portuguese or Traditional/Simplified Chinese), there
+# will also be a line that begins with '###$ ' showing the translation in the
+# other language, if there was a translation in the other language.
+# You should not change those lines.
+#
+# You can also correct mispelled translations, if you see one that is wrong.
 ################################################################################
 ################################################################################
 # TRANSLATIONS START BELOW.
@@ -180,7 +176,7 @@ ABOUT_LABEL_START=LimeWire
 #? ABOUT_WEBDEV_BLURB=
 #### ABOUT_SUPPORT_BLURB=LimeWire PRO questions are dutifully answered by LimeWire technical support:
 #? ABOUT_SUPPORT_BLURB=
-#### ABOUT_PREVIOUS_DEV_BLURB=In addition, the following developers have worked on the LimeWire team in the past but have since moved on to other projects:
+#### ABOUT_PREVIOUS_DEV_BLURB=In addition, the following individuals have worked on the LimeWire team in the past but have since moved on to other projects:
 #? ABOUT_PREVIOUS_DEV_BLURB=
 #### ABOUT_CONTRIBUTORS_BLURB=LimeWire open source contributors have provided significant code and many bug fixes, ideas, research, etc. to the project as well. Those listed below have either written code that is distributed with every version of LimeWire, have identified serious bugs in the code, or both:
 #? ABOUT_CONTRIBUTORS_BLURB=
@@ -335,7 +331,6 @@ MENU_FILE_CLOSE=Serriñ
 #? MENU_NAV_CONSOLE_MNEMONIC=
 #### MENU_NAV_CONSOLE_ACCESSIBLE=Display the Console Screen
 #? MENU_NAV_CONSOLE_ACCESSIBLE=
-
 
 #### MENU_VIEW_TITLE=View
 MENU_VIEW_TITLE=Gwel
@@ -607,7 +602,7 @@ MENU_HELP_ABOUT=War-dro Limewire
 #? SEARCH_RESULT_TABLE_LABEL=
 #### SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Search More
 #? SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=
-#### SEARCH_RESULT_SECURE_TIP=This is a secure result.  No information in this result has been tampered. 
+#### SEARCH_RESULT_SECURE_TIP=This is a secure result. No information in this result has been tampered.
 #? SEARCH_RESULT_SECURE_TIP=
 #### SEARCH_VIRUS_MSG_ONE=One of the selected files is an executable
 #? SEARCH_VIRUS_MSG_ONE=
@@ -704,7 +699,6 @@ MENU_HELP_ABOUT=War-dro Limewire
 #? CHECK_BOX_LIST_DESELECT_ALL_ACTION_NAME=
 #### CHECK_BOX_LIST_DESELECT_ALL_ACTION_TOOLTIP=Deselects all Items in the List
 #? CHECK_BOX_LIST_DESELECT_ALL_ACTION_TOOLTIP=
-
 
 #Media Types
 #### MEDIA_ANY_TYPE=All Types
@@ -1147,7 +1141,7 @@ DOWNLOAD_NAME_COLUMN=Anv
 #? DOWNLOAD_STATUS_PAUSED=
 #### DOWNLOAD_STATUS_INVALID=Content Removed
 #? DOWNLOAD_STATUS_INVALID=
-#### DOWNLOAD_INVALID_EXPLAIN=The owner of this content has requested that this file be removed from the network.  To learn more, double-click on the download (or click preview).
+#### DOWNLOAD_INVALID_EXPLAIN=The owner of this content has requested that this file be removed from the network. To learn more, double-click on the download (or click preview).
 #? DOWNLOAD_INVALID_EXPLAIN=
 #### DOWNLOAD_AWAITING_SOURCES=A more specific search may be required...
 #? DOWNLOAD_AWAITING_SOURCES=
@@ -1467,7 +1461,7 @@ PLAYLIST_TABLE_NAME=Anv
 #? SETUP_DIALOG_TITLE=
 #### SETUP_LANGUAGE_TITLE=Language Options
 #? SETUP_LANGUAGE_TITLE=
-#### SETUP_CHOOSE_LANGUAGE_LABEL=Choose Language: 
+#### SETUP_CHOOSE_LANGUAGE_LABEL=Choose Language:
 #? SETUP_CHOOSE_LANGUAGE_LABEL=
 #### SETUP_LANGUAGE_LABEL=Please choose the language you would like LimeWire to use.
 #? SETUP_LANGUAGE_LABEL=
@@ -1525,7 +1519,7 @@ PLAYLIST_TABLE_NAME=Anv
 #? SETUP_CONFIRM_LABEL_NO_DIRECTORIES=
 #### SETUP_FILTER_TITLE=Content Filtering
 #? SETUP_FILTER_TITLE=
-#### SETUP_FILTER_LABEL=LimeWire can filter files that copyright owners request not be shared.  By enabling filtering, you are telling LimeWire to confirm all files you download or share with a list of removed content.  You can change this at any time by choosing Filters -> Configure Content Filters from the main menu.
+#### SETUP_FILTER_LABEL=LimeWire can filter files that copyright owners request not be shared. By enabling filtering, you are telling LimeWire to confirm all files you download or share with a list of removed content. You can change this at any time by choosing Filters -> Configure Content Filters from the main menu.
 #? SETUP_FILTER_LABEL=
 #### SETUP_FILTER_CHECKBOX=Enable Content Filtering
 #? SETUP_FILTER_CHECKBOX=
@@ -1888,7 +1882,7 @@ META_EDITOR_LICENSE_LABEL=Aotre arverañ :
 #? INTERNETARCHIVE_UPLOADER_FILE_UPLOADING=
 #### INTERNETARCHIVE_UPLOADER_FILE_UPLOADING_OF=of
 #? INTERNETARCHIVE_UPLOADER_FILE_UPLOADING_OF=
-#### INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Uploaded 
+#### INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Uploaded
 #? INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=
 #### INTERNETARCHIVE_UPLOADER_FILE_BYTESOF=bytes of
 #? INTERNETARCHIVE_UPLOADER_FILE_BYTESOF=
@@ -2812,9 +2806,8 @@ OPTIONS_SAVE_DIR_BROWSE_BUTTON_LABEL=Furchal...
 
 #### OPTIONS_ITUNES_DAAP_BUFFER_SIZE_TITLE=Buffer Size
 #? OPTIONS_ITUNES_DAAP_BUFFER_SIZE_TITLE=
-#### OPTIONS_ITUNES_DAAP_BUFFER_SIZE_LABEL=You can configure the buffer size to use for streaming media.  If iTunes or other media players experience frequent rebuffering, increase this value.  A higher setting may use more memory.
+#### OPTIONS_ITUNES_DAAP_BUFFER_SIZE_LABEL=You can configure the buffer size to use for streaming media. If iTunes or other media players experience frequent rebuffering, increase this value. A higher setting may use more memory.
 #? OPTIONS_ITUNES_DAAP_BUFFER_SIZE_LABEL=
-
 
 ################################################################################
 # Key/Value pairs for url handler options
@@ -3075,16 +3068,13 @@ OPTIONS_SAVE_DIR_BROWSE_BUTTON_LABEL=Furchal...
 #### OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=Password:
 #? OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=
 
-
-
-
 ################################################################################
 # Key/value pairs for the content filter options window item
 # in the options window
 ################################################################################
 #### OPTIONS_CONTENT_FILTER_TITLE=Content Filters
 #? OPTIONS_CONTENT_FILTER_TITLE=
-#### OPTIONS_CONTENT_FILTER_LABEL=You can tell LimeWire to filter files that copyright owners request not be shared.  By enabling filtering, you are instructing LimeWire to confirm all files you download or share with a list of removed content.
+#### OPTIONS_CONTENT_FILTER_LABEL=You can tell LimeWire to filter files that copyright owners request not be shared. By enabling filtering, you are instructing LimeWire to confirm all files you download or share with a list of removed content.
 #? OPTIONS_CONTENT_FILTER_LABEL=
 #### OPTIONS_CONTENT_FILTER_CHECKBOX_LABEL=Enable Content Filters
 #? OPTIONS_CONTENT_FILTER_CHECKBOX_LABEL=
@@ -3753,26 +3743,6 @@ STATS_TOTAL_SENT_BYTES_UDP_MESSAGES_TITLE=UDP
 #? STATS_LIME_SENT_BYTES_MULTICAST_PUSH_REQUESTS_TITLE=
 #### STATS_LIME_SENT_BYTES_MULTICAST_PUSH_REQUESTS_LABEL=Kilobytes for Multicast pushes sent from all Gnutella clients versus other LimeWires.
 #? STATS_LIME_SENT_BYTES_MULTICAST_PUSH_REQUESTS_LABEL=
-
-# ultrapeer-specific sent stats
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_TITLE=Sent
-#? STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_TITLE=
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_LABEL=All queries that were routed to other Ultrapeers for the last hop, using query routing tables.
-#? STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_LABEL=
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_TITLE=Not Sent
-#? STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_TITLE=
-#### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_LABEL=
-#? STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_LABEL=
-
-# leaf-specific sent stats
-#### STATS_SENT_LEAF_ROUTED_QUERIES_SEND_TITLE=Sent
-#? STATS_SENT_LEAF_ROUTED_QUERIES_SEND_TITLE=
-#### STATS_SENT_LEAF_ROUTED_QUERIES_SEND_LABEL=All queries that were routed to leaves, using query routing tables.
-#? STATS_SENT_LEAF_ROUTED_QUERIES_SEND_LABEL=
-#### STATS_SENT_LEAF_ROUTED_QUERIES_DROP_TITLE=Not Sent
-#? STATS_SENT_LEAF_ROUTED_QUERIES_DROP_TITLE=
-#### STATS_SENT_LEAF_ROUTED_QUERIES_DROP_LABEL=
-#? STATS_SENT_LEAF_ROUTED_QUERIES_DROP_LABEL=
 
 ################################################################################
 # Key/value pairs for advanced Gnutella message statistics -- handshaking
