synchronizing message bundles.

--- a/lib/messagebundles/MessagesBundle_nn.properties
+++ b/lib/messagebundles/MessagesBundle_nn.properties
@@ -682,11 +682,11 @@ SEARCH_FOR_KEYWORDS_ACTION_NAME=Søk etter Nøkkelord: {0}
 SEARCH_ACTION_NAME=Søk etter: {0}
 # {0} the already translated mediatype
 #### SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Search "What''s New" for: {0}
-SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME= Søk etter "Hva er Nytt": {0}
+SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Søk etter "Hva er Nytt": {0}
 # {0} the type of the search, e.g. Title, Album, Genre
 # {1} the keywords fo the search, e.g. name of the album
 #### SEARCH_XML_FIELD_ACTION_NAME=Search for {0}: {1}
-SEARCH_XML_FIELD_ACTION_NAME= Søk etter {0}: {1}
+SEARCH_XML_FIELD_ACTION_NAME=Søk etter {0}: {1}
 
 ################################################################################
 # CheckBoxList actions
@@ -1496,7 +1496,7 @@ SETUP_FIREWALL_LABEL=Limewire fungerer best med full adgang til Internett. Hvis 
 #### SETUP_SCAN_TITLE=Scan for Files
 SETUP_SCAN_TITLE=Søk etter Filer
 #### SETUP_SCAN_LABEL=Would you like LimeWire to quickly scan your hard drive for other media files? You will have the opportunity to specify which folders you would like to share when the scan is complete.
-Vil du at LimeWire raskt skal søke på harddisken etter andre mediafiler? Du vil få muligheten til å spesifisere hvilke mapper du vil dele når søket er ferdig.
+#? SETUP_SCAN_LABEL=
 #### SETUP_SCAN_TITLED_BORDER=Scan Hard Drive?
 SETUP_SCAN_TITLED_BORDER=Skanne Hard Disk?
 #### SETUP_WAIT_TITLE=Scanning Hard Drive
@@ -1514,7 +1514,7 @@ SETUP_CONFIRM_TITLE=Bekreft Sckan
 #### SETUP_CONFIRM_LABEL=We identified the folders below as ones that you might like to share. If you would like to share one of these folders, simply check its associated checkbox. Subfolders of shared folders will also be shared.
 SETUP_CONFIRM_LABEL=LimeWire identifiserte mappene under som kan deles. Om du vil dele en av disse mappene, sett kryss i avkryssningsboksen. Undermapper av delte mapper vil også bli delt.
 #### SETUP_CONFIRM_FOLDERS_WILL_BE_SHARED=The selected folders below (and their subfolders) will be shared.
-SETUP_CONFIRM_FOLDERS_WILL_BE_SHARED=
+#? SETUP_CONFIRM_FOLDERS_WILL_BE_SHARED=
 #### SETUP_CONFIRM_LABEL_NO_DIRECTORIES=LimeWire was unable to locate any files that may be shared. To continue configuring LimeWire, click "Next".
 SETUP_CONFIRM_LABEL_NO_DIRECTORIES=LimeWire klarte ikke å finne noen filer som kan deles. For å fortsette med å stille inn LimeWire, klikk "Neste".
 #### SETUP_FILTER_TITLE=Content Filtering
