--- a/lib/messagebundles/de.po
+++ b/lib/messagebundles/de.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: LimeWire Client\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-01 11:30-0500\n"
-"PO-Revision-Date: 2010-03-01 17:21+0000\n"
-"Last-Translator: Jarret <jbattisti@limewire.com>\n"
+"PO-Revision-Date: 2010-03-03 18:27+0000\n"
+"Last-Translator: MixCool <lars.thoms@mixcool.de>\n"
 "Language-Team: DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-03-02 04:33+0000\n"
+"X-Launchpad-Export-Date: 2010-03-05 00:16+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: components/core-api/src/main/java/org/limewire/core/api/Category.java:14
@@ -990,7 +990,8 @@ msgstr "Lizenzschlüssel:"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/activation/ActivationPanel.java:431
 msgid "Your License Key has been used on too many installations."
-msgstr "Ihr Lizensschlüssel wurde in zu vielen Installationen verwendet."
+msgstr ""
+"Ihr Lizenzschlüssel wurde bereits für zu viele Installationen verwendet."
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/activation/ActivationPanel.java:433
 msgid "Connection error. Please try again later."
