--- a/lib/messagebundles/el.po
+++ b/lib/messagebundles/el.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: LimeWire Client\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-01 11:30-0500\n"
-"PO-Revision-Date: 2010-03-01 17:27+0000\n"
-"Last-Translator: Jarret <jbattisti@limewire.com>\n"
+"PO-Revision-Date: 2010-03-02 19:36+0000\n"
+"Last-Translator: George Kontis <giormatsis@gmail.com>\n"
 "Language-Team: EL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-03-02 04:33+0000\n"
+"X-Launchpad-Export-Date: 2010-03-05 00:17+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "X-Poedit-Language: Greek\n"
 
@@ -841,12 +841,11 @@ msgid ""
 msgstr ""
 "Το LimeWire δεν κατάφερε να δημιουργήσει προσωρινό φάκελο προτιμήσεων.\n"
 "\n"
-"Αυτό γενικά οφείλεται σε έλλειψη αδειών.  Βεβαιωθείτε ότι το LimeWire (και "
-"εσείς) μπορείτε να δημιουργήσετε αρχεία/φακέλους στον υπολογιστή σας.  Αν το "
-"πρόβλημα συνεχίσει, επισκεφθείτε την ιστοσελίδα www.limewire.com και "
-"επιλέξτε 'Υποστήριξη'.\n"
+"Αυτό γενικά οφείλεται σε έλλειψη αδειών.  Βεβαιωθείτε ότι το LimeWire και "
+"εσείς έχετε άδεια δημιουργίας αρχείων/φακέλων στον υπολογιστή σας.  Αν το "
+"πρόβλημα επιμείνει, επισκεφθείτε την \"Υποστήριξη\" του www.limewire.com.\n"
 "\n"
-"Το LimeWire θα σταματήσει να λειτουργεί.  Σας ευχαριστούμε."
+"Τώρα θα γίνει έξοδος από το LimeWire. Ευχαριστούμε."
 
 #: private-components/integrated-ui/src/main/java/org/limewire/ui/swing/Initializer.java:692
 #: private-components/integrated-ui/src/main/java/org/limewire/ui/swing/MessageHandler.java:34
@@ -3573,8 +3572,8 @@ msgid ""
 "LimeWire will not show files with the following keywords in your search "
 "results"
 msgstr ""
-"Το LimeWire θα εμφανίσει τώρα στα αποτελέσματα αναζήτησης αρχεία με τις "
-"παρακάτω λέξεις-κλειδιά"
+"Το LimeWire δεν θα εμφανίζει στα αποτελέσματα αναζήτησης αρχεία με τις "
+"παρακάτω λέξεις-κλειδί"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/options/FilteringOptionPanel.java:102
 msgid "Use LimeWire's blacklist to protect you from harmful people"
