Updated po files and messages.jars

--- a/lib/messagebundles/el.po
+++ b/lib/messagebundles/el.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: LimeWire Client\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-01 11:30-0500\n"
-"PO-Revision-Date: 2010-03-05 13:20+0000\n"
+"PO-Revision-Date: 2010-03-08 03:02+0000\n"
 "Last-Translator: George Kontis <giormatsis@gmail.com>\n"
 "Language-Team: EL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-03-05 16:21+0000\n"
+"X-Launchpad-Export-Date: 2010-03-09 04:41+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "X-Poedit-Language: Greek\n"
 
@@ -1591,8 +1591,8 @@ msgstr "Φίλοι"
 #, java-format
 msgid "{0} P2P User"
 msgid_plural "{0} P2P Users"
-msgstr[0] "{0} P2P Χρήστης"
-msgstr[1] "{0} P2P Χρήστες"
+msgstr[0] "{0} P2P User"
+msgstr[1] "{0} P2P Users"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/components/RemoteHostWidget.java:202
 msgid "P2P User"
