--- a/lib/messagebundles/nds.po
+++ b/lib/messagebundles/nds.po
@@ -9,13 +9,13 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-01 11:30-0500\n"
 "PO-Revision-Date: 2009-10-21 15:48+0000\n"
-"Last-Translator: Nils-Christoph Fiedler <Unknown>\n"
+"Last-Translator: Nils-Christoph Fiedler <ncfiedler@gnome.org>\n"
 "Language-Team: German, Low <nds@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-03-05 16:22+0000\n"
+"X-Launchpad-Export-Date: 2010-03-09 04:42+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: components/core-api/src/main/java/org/limewire/core/api/Category.java:14
