--- a/lib/messagebundles/pl.po
+++ b/lib/messagebundles/pl.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-01 11:30-0500\n"
-"PO-Revision-Date: 2010-02-03 14:19+0000\n"
-"Last-Translator: Max <marek.glad@interia.pl>\n"
+"PO-Revision-Date: 2010-03-08 13:10+0000\n"
+"Last-Translator: hot_shot <Unknown>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2010-03-05 16:22+0000\n"
+"X-Launchpad-Export-Date: 2010-03-09 04:41+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: components/core-api/src/main/java/org/limewire/core/api/Category.java:14
