--- a/lib/messagebundles/ru.po
+++ b/lib/messagebundles/ru.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: LimeWire 5.4.6\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-01 11:30-0500\n"
-"PO-Revision-Date: 2010-03-01 11:17+0000\n"
-"Last-Translator: https://help.launchpad.net/NewToLaunchpad <Unknown>\n"
+"PO-Revision-Date: 2010-03-07 16:37+0000\n"
+"Last-Translator: fastdriver74 <Unknown>\n"
 "Language-Team: Launchpad Translators\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2010-03-05 16:21+0000\n"
+"X-Launchpad-Export-Date: 2010-03-09 04:41+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "X-Poedit-Country: RUSSIAN FEDERATION\n"
 "X-Poedit-Language: Russian\n"
